# localization-gap

./: LICENSE  README.md  explore_embs.ipynb  explore_raw_data.ipynb  pairwise_comparison_faith.py  pairwise_comparison_stereo.py  plot_results.py  prepare_data.ipynb  pyproject.toml  score_generations.py  steering.ipynb  steering.py  steering_universal.ipynb  suffix.ipynb
analysis/: 5choice_dataset_input_ready.csv  all_steering_results_per_task_culture.csv  analysis.ipynb  best_alpha_layer_for_alltaskpertask.csv  best_alpha_layer_for_alltasks.csv  best_alpha_layer_for_o3.csv  best_alpha_layer_macro.csv  best_steering_per_task_culture.csv  best_steering_res_implicit_per_culture.csv  best_steering_res_per_culture_fixed.csv  best_steering_res_per_task_on_eng_prompts.csv  tables.ipynb
data/faithfulness_comparisons/: win_rates.json
data/faithfulness_comparisons_Gemma_2_27B_NEITHER/: win_rates.json
data/faithfulness_comparisons_Gemma_2_27B_NEITHER_REASONING/: win_rates.json
scripts/: faith.sh  faith_reasoning.sh  stereo.sh  stereo_reasoning.sh
src/: embeddings.py  generate.py  intra_diversity.py  model_configs.py  pairwise_comparison_faith.py  pairwise_comparison_fluency.py  pairwise_comparison_stereo.py  plot_agg_winrate_plots.py  plot_fluency_results.py  plot_stereo_results.py  prompts.py  stereo_judge_prompt.py  stereo_score_generations.py  translate.py  translate_prompts.py  translate_utils.py  utils.py
steering/: contrastive.ipynb  eval.ipynb  requirements.txt
tools/: evaluation.py  globals.py  logitlens.py  nnsight_utils.py  patchscope.py  prompts.py
(+184 files in other folders)
